test/compilable/imports/test3254a.d
module imports.test3254a;

void bar(int)
{
}

private void bar(float)
{
}
