test/fail_compilation/fail89.d
const int a = b;
const int b = .a;
void main(){}

